--- a/caseStudyRickAndMorty/android/app/build.gradle
+++ b/caseStudyRickAndMorty/android/app/build.gradle
@@ -51,6 +51,13 @@ react {
     // hermesFlags = ["-O", "-output-source-map"]
 }
 
+project.ext.vectoricons = [
+    iconFontNames: [ 'AntDesign.ttf'  ] // Specify font files
+]
+
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
+
+
 /**
  * Set this to true to Run Proguard on Release builds to minify the Java bytecode.
  */
